anchor links open new tab

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>SavvyCat17 Projects</title>
 </head>
 <body>
-    <a href="https://savvycat17.github.io/PokemonQuiz">Pokemon Quiz</a>
-    <a href="https://savvycat17.github.io/ErnieVinylScavengerHunt">Vinyl Scavenger Hunt</a>
+    <a target="_blank" href="https://savvycat17.github.io/PokemonQuiz">Pokemon Quiz</a>
+    <a target="_blank" href="https://savvycat17.github.io/ErnieVinylScavengerHunt">Vinyl Scavenger Hunt</a>
 </body>
 </html>
