Replecting repo name change in main html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <a target="_blank" href="https://savvycat17.github.io/PokemonQuiz">Pokemon Quiz</a>
-    <a target="_blank" href="https://savvycat17.github.io/ErnieVinylScavengerHunt">Vinyl Scavenger Hunt</a>
+    <a target="_blank" href="https://savvycat17.github.io/ScavengerHunt">Vinyl Scavenger Hunt</a>
 </body>
 </html>
